# traffic-light

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  Makefile  README.md  make_version.py  sdkconfig.defaults
main/: CMakeLists.txt  Kconfig.projbuild  config.h  main.c
main/button/: button.c  button_config.h
main/http/: description.md  http_server.c  http_server.h
main/led/: led.c  led.h  led_default_modes.c
main/modes/: mode_decoder.c  mode_decoder.h  mode_manager.c  mode_manager.h  modes.h
main/mqtt/: mqtt.c  mqtt.h  mqtt_topics.c
main/utils/: types.h  utils.h
main/wifi/: wifi.c  wifi.h
scripts/: build_version.py  make_version.py
